Create main routers app at routes/index.js

--- a/backend/views/login.html
+++ b/backend/views/login.html
@@ -65,7 +65,7 @@
                     url: '/login',
                     data: data
                 }).done(function(data) {
-                    window.location = '/users';
+                    window.location = '/index';
                 }).error(function(err) {
                     $('#loginForm #messages').text(err.responseText);
                 });
