Backend: Add support to frontend calls

--- a/backend/views/login.html
+++ b/backend/views/login.html
@@ -113,7 +113,7 @@
             </br>
             <div class="wrapper">
             <span class="group-btn">
-                <a href="#" id="loginBtn" class="btn btn-primary btn-md">Login</i></a>
+                <button type="button" id="loginBtn" class="btn btn-primary btn-md">Login</i></button>
             </span>
             </div>
             </div>
