--- a/backend/views/main.html
+++ b/backend/views/main.html
@@ -3,27 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-
-    <!-- External plugins -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.4.0/backbone.marionette.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-
-    <!-- External styles -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
-    <!-- Backbone elements -->
-    <script src="/userModel.js"></script>
-    <script src="/userCollection.js"></script>
-    <script src="/userViews.js"></script>
-
-    <!-- Precompiled templates -->
-    <script src="/user.hbs.js"></script>
-    <script src="/userTable.hbs.js"></script>
-    <script src="/userEditor.hbs.js"></script>
 </head>
 <body>
 <div class="row">
@@ -36,8 +17,6 @@
         <div id="main-container"></div>
     </div>
 </div>
-
-<!-- App code -->
-<script src="/app.js"></script>
+<script data-main="/main.js" src="/require.js"></script>
 </body>
 </html>
