--- a/backend/views/main.html
+++ b/backend/views/main.html
@@ -17,6 +17,6 @@
         <div id="main-container"></div>
     </div>
 </div>
-<script data-main="/main.js" src="/require.js"></script>
+<script data-main="/main.js" src="/requirejs/require.js"></script>
 </body>
 </html>
